--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ Stickerses
 
 <a id="Feve"><h2>Feve</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/feve">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/brizunzies">Twitter</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/faunbutt">Patreon</a></li>
+    <li class="artist-link kofi"><a href="https://ko-fi.com/faunartin">Ko-fi</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -67,7 +70,8 @@ Stickerses
 
 <a id="Spazzcraft"><h2>Spazzcraft</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/Spazzcraft">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/SpazzCraft">Twitter</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -77,7 +81,10 @@ Stickerses
 
 <a id="Khyaber"><h2>Khyaber</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/Khyaber">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/Adheadface">Twitter</a></li>
+    <li class="artist-link picarto"><a href="https://picarto.tv/Khyaber">Picarto</a></li>
+    <li class="artist-link deviantart"><a href="https://www.deviantart.com/khyaber">Deviantart</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -90,7 +97,6 @@ Stickerses
 
 <a id="HaiseSensei"><h2>HaiseSensei</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -101,6 +107,7 @@ Stickerses
 <a id="Zephyr"><h2>Zephyr</h2></a>
 <ul>
     <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/zephyr42">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/zephyrdrgn">Twitter</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -110,7 +117,9 @@ Stickerses
 
 <a id="Seiska"><h2>Seiska</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://www.twitter.com/northswept">Twitter</a></li>
+    <li class="artist-link kofi"><a href="https://ko-fi.com/northswept">Ko-fi</a></li>
+    <li class="artist-link picarto"><a href="https://www.picarto.tv/sheylin">Picarto</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -126,7 +135,11 @@ Stickerses
 
 <a id="Dirtyfox911911"><h2>Dirtyfox911911</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/dirtyfox911911">Furaffinity</a></li>
+    <li class="artist-link vk"><a href="https://vk.com/dirtyfox911911">VK</a></li>
+    <li class="artist-link deviantart"><a href="https://www.deviantart.com/dirtyfox911911">Deviantart</a></li>
+    <li class="artist-link picarto"><a href="https://www.picarto.tv/Dirtyfox911911">Picarto</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/DirtyFox911">Patreon</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -175,7 +188,9 @@ Stickerses
 
 <a id="Teavern"><h2>Teavern</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/pur3">Furaffinity</a></li>
+    <li class="artist-link picarto"><a href="https://www.picarto.tv/pur3">Picarto</a></li>
+    <li class="artist-link telegram"><a href="https://t.me/teascribbles">Telegram channel</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -188,7 +203,10 @@ Stickerses
 
 <a id="Whisperer"><h2>Whisperer</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/whisperer">Furaffinity</a></li>
+    <li class="artist-link picarto"><a href="https://picarto.tv/Whisperer">Picarto</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/WhispererWhisps">Twitter</a></li>
+    <li class="artist-link kofi"><a href="https://ko-fi.com/whisperer">Ko-fi</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -198,7 +216,11 @@ Stickerses
 
 <a id="ZazushUna"><h2>Zazush-una</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/zazush-una">Furaffinity</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/zazush">Patreon</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/Zazush_una">Twitter</a></li>
+    <li class="artist-link telegram"><a href="https://t.me/zazush_una_art">Telegram channel</a></li>
+    <li class="artist-link deviantart"><a href="https://www.deviantart.com/zazush--una">Deviantart</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -208,7 +230,9 @@ Stickerses
 
 <a id="DirtyPaws"><h2>Dirty.Paws</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/dirty.paws">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/Dirtypeets">Twitter</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/Dirtypaws">Patreon</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -232,7 +256,7 @@ Stickerses
 
 <a id="Shinigami"><h2>Shinigami Squirrel</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/shinigamisquirrel">Furaffinity</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -242,7 +266,7 @@ Stickerses
 
 <a id="Fishtits"><h2>Fishtits</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/fishtits/">Furaffinity</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -258,7 +282,10 @@ Stickerses
 
 <a id="Maneframe"><h2>Maneframe</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/maneframe">Furaffinity</a></li>
+    <li class="artist-link telegram"><a href="https://t.me/ManeframeArt">Telegram channel</a></li>
+    <li class="artist-link kofi"><a href="https://ko-fi.com/maneframe">Ko-fi</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/ManeframeArt">Patreon</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -268,7 +295,9 @@ Stickerses
 
 <a id="Qwertydragon"><h2>qwertydragon</h2></a>
 <ul>
-    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/l[i]s">Furaffinity</a></li>
+    <li class="artist-link furaffinity"><a href="https://www.furaffinity.net/user/qwertydragon">Furaffinity</a></li>
+    <li class="artist-link twitter"><a href="https://twitter.com/BastionBitch">Twitter</a></li>
+    <li class="artist-link patreon"><a href="https://www.patreon.com/xubuntu">Patreon</a></li>
 </ul>
 <div class="stickers">
     <div class="sticker">
@@ -298,5 +327,4 @@ Stickerses
         <img src="stickers/paldreamer/44.png" alt="???" />
     </div>
 </div>
-
 </html>
